log
Thu 09 May 2024 05:41:23 PM UTC: 
 tests:  1|8
total_score: 0/70
1395f8a
Thu 09 May 2024 05:44:22 PM UTC: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
3f03811
Thu 09 May 2024 05:52:20 PM UTC: 
 treemap.c | 50 +++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 49 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
2fe0523
Thu 09 May 2024 06:02:57 PM UTC: 
 treemap.c | 69 +++++++++++++++++++++++++++------------------------------------
 1 file changed, 30 insertions(+), 39 deletions(-)
 tests:  4|7
total_score: 5/70
a47745f
Thu 09 May 2024 06:04:38 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
796612b
Thu 09 May 2024 06:32:20 PM UTC: 
 treemap.c | 60 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 59 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:159:25: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  159 |         temp->pair->key = succKey;
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
608a869
Thu 09 May 2024 06:32:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:156:13: error: unused variable ‘succKey’ [-Werror=unused-variable]
  156 |         int succKey = *((int*)successor->pair->key);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a2cf2d6
Thu 09 May 2024 06:32:40 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
b22988d
Thu 09 May 2024 06:39:23 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  7|6
total_score: 5/70
bb76a11
Fri 10 May 2024 11:33:54 PM UTC: 
 treemap.c | 59 ++++++++++++++++++++++++++++-------------------------------
 1 file changed, 28 insertions(+), 31 deletions(-)
 tests:  8|5
total_score: 15/70
4bfd927
Fri 10 May 2024 11:34:49 PM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  8|5
total_score: 15/70
b055c43
Fri 10 May 2024 11:44:30 PM UTC: 
 treemap.c | 89 ++++++++++++++++++++++++++++-----------------------------------
 1 file changed, 39 insertions(+), 50 deletions(-)
 tests:  8|5
total_score: 15/70
14746c6
Fri 10 May 2024 11:45:44 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
b489d2b
Fri 10 May 2024 11:47:07 PM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  8|5
total_score: 15/70
a5e0170
Fri 10 May 2024 11:52:47 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  18|3
total_score: 40/70
612422f
Fri 10 May 2024 11:58:53 PM UTC: 
 treemap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|0
decdab2
